--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.blue-snackbar {
+    background: #2196F3;
+}
+.red-snackbar {
+    background: #F44336;
+}
+
+.danger .mat-dialog-container {
+     background-color: #F44336    
+}
+/* .success .mat-dialog-container {
+    background-color: #00FF00
+}
+
+.warn .mat-dialog-container {
+    background-color: #FF8C00    
+} */
+
+
